Improved pop-ups to avoid layout issues in IE.

--- a/src-modules/org/opencms/gwt/client/ui/css/contentEditor.css
+++ b/src-modules/org/opencms/gwt/client/ui/css/contentEditor.css
@@ -1,17 +1,4 @@
-@external dialogTop, dialogMiddleCenter, dialogContent;
-
-.contentEditor .dialogTop{
-	height: 23px;
-}
-.contentEditor .dialogMiddleCenter, .contentEditor .dialogContent{
-	height: 100%;
-}
-
-.contentEditor .dialogContent>div{
-	height: 99.5%;
-	margin: 0.25%;
-}
-.contentEditor .dialogContent iframe{
+.contentEditor iframe{
 	height: 100%;
 	width: 100%;
 	border: none;
